--- a/src/users/contactus/contact.css
+++ b/src/users/contactus/contact.css
@@ -32,7 +32,7 @@ a{
 	transition: all ease 0.3s;
 }
 .contact-box{
-	background-color:#f3ebff;
+	background-color:#FEFCF3;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -48,7 +48,7 @@ a{
 	font-weight: light;
 	margin: 0px;
 	padding: 0px;
-	color: #805ad5;
+	color: #083AA9;
 }
 .c-heading p{
 	font-family: apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";	
@@ -58,7 +58,7 @@ a{
 	margin: 0px;
 	padding: 0px;
 	text-align: center;
-	color: #805ad5;
+	color: #083AA9;
 	margin-top: 5px;
 	margin-bottom: 20px;
 }
@@ -105,7 +105,7 @@ font-weight: 500;
 	width:150px;
 	height: 40px;
 	
-	background-color:#805ad5;
+	background-color:#083AA9;
 	border: none;
 	outline: none;
 	margin-top: 20px;
